--- a/style.css
+++ b/style.css
@@ -5,19 +5,27 @@ body {
 }
 
 #main {
-    padding: 10px;
+    padding: 0px;
+    border: 0px;
     background-color: gray;
     height: 100%;
-    width: 100%;
+    width: 20%;
     text-align: left;
     font-family: helvetica;
     font-size: 14px;
+    float: left;
+    display: inline-block;
+    overflow: hidden;
 
 }
 
 #map_canvas{
+    padding: 0px;
+    border: 0px;
     height: 100%;
-    width: 100%;
+    width: 80%;
+    float: right;
+    display: inline-block;
 
 
 }
