--- a/ad_mapper.css
+++ b/ad_mapper.css
@@ -6,29 +6,29 @@ body {
 
 #main {
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 0;
     z-index: 1;
     padding: 0px;
     padding-left: 10px;
     border: 0px;
     background-color: gray;
-    height: 570px;
-    width: 20%;
+    height: 100%;
+    width: 200px;
     text-align: left;
     font-family: helvetica;
     font-size: 14px;
     display: inline-block;
-    overflow: hidden;
+    overflow: auto;
     border: solid 5px white;
     border-radius: 5px;
-    opacity: 0.9;
+    opacity: 1;
 }
 
 #map_canvas{
     position: absolute;
     top: 0;
-    left: 0;
+    left: 200;
     z-index: 0;
     padding: 0px;
     border: 0px;
@@ -70,9 +70,6 @@ h2.admin {
     font-family: helvetica;
 }
 
-#adminBody{
-    padding: 10px;
-}
 
 .hide{
     position: absolute;
@@ -80,4 +77,8 @@ h2.admin {
     left:-1px;
     width:1px;
     height:1px;
+}
+
+#ad-list{
+    overflow: scroll;
 }
